--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
-	"i18n-ally.localesPaths": ["src/languages", "E:/GitHub/World-Hunters-Association/Solo-Leveling-Simulator/src/languages"],
+	"i18n-ally.localesPaths": ["src/languages"],
 	"i18n-ally.sourceLanguage": "en-US",
-	"i18n-ally.keystyle": "nested"
+	"i18n-ally.keystyle": "nested",
+	"i18n-ally.editor.preferEditor": true,
+	"i18n-ally.displayLanguage": "en-US",
+	"i18n-ally.indent": 4,
+	"i18n-ally.pathMatcher": "{locale}/{namespace}.json",
+	"i18n-ally.sortKeys": true,
+	"i18n-ally.keepFulfilled": true,
+	"i18n-ally.namespace": true,
+	"i18n-ally.preferredDelimiter": ":",
+	"i18n-ally.enabledFrameworks": ["sapphire-i18next"]
 }
