--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,11 @@
 {
 	// See http://go.microsoft.com/fwlink/?LinkId=827846
 	// for the documentation about the extensions.json format
-	"recommendations": ["dbaeumer.vscode-eslint", "aaron-bond.better-comments", "mike-co.import-sorter", "ms-vsliveshare.vsliveshare"]
+	"recommendations": [
+		"dbaeumer.vscode-eslint",
+		"aaron-bond.better-comments",
+		"mike-co.import-sorter",
+		"ms-vsliveshare.vsliveshare",
+		"mzato0001.sapphire-i18n-ally"
+	]
 }
