--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
 		"@sapphire/discord.js-utilities": "^4.9.7",
 		"@sapphire/fetch": "^2.3.1",
 		"@sapphire/framework": "next",
-		"@sapphire/plugin-api": "^3.2.1",
 		"@sapphire/plugin-hmr": "^1.2.0",
 		"@sapphire/plugin-i18next": "^2.5.0",
 		"@sapphire/plugin-logger": "^2.2.1",
-		"@sapphire/plugin-subcommands": "^2.2.0",
-		"@sapphire/time-utilities": "^1.7.4",
-		"@sapphire/type": "^2.2.0",
 		"@sapphire/utilities": "^3.6.2",
 		"chokidar-cli": "^3.0.0",
 		"colorette": "^2.0.16",
 		"discord.js": "^13.6.0",
 		"dotenv-cra": "^3.0.2",
 		"mongodb": "^4.5.0",
+		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
@@ -43,7 +40,6 @@
 		"husky": "^7.0.4",
 		"jest": "^27.5.1",
 		"lint-staged": "^12.4.0",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
 		"tsc-watch": "^5.0.3",
@@ -53,14 +49,17 @@
 		"commit": "git-cz",
 		"prepare": "husky install .github/.husky",
 		"watch": "tsc -w",
-		"chokidar": "chokidar \"src/languages/**/*.json\" -c \"cpy src/languages/**/*.json dist/languages/\"",
-		"build": "tsc&cpy src/languages/**/*.json dist/languages/",
+		"build:p": "npm run build && cp -R src/languages dist/languages",
+		"chokidar:p": "chokidar \"src/languages/**/*.json\" -c \"cp -R src/languages dist/languages\"",
 		"start:p": "node dist/index.js",
-		"start": "run-p watch chokidar start:p",
-		"build:dev": "npm run build",
+		"staging": "npm run build:p && run-p watch chokidar:p start:dev",
+		"build": "tsc",
+		"start": "run-p watch chokidar:p start:p",
+		"build:dev": "npm run build&cpy src/languages/**/*.json dist/languages/",
+		"chokidar:dev": "chokidar \"src/languages/**/*.json\" -c \"cpy src/languages/**/*.json dist/languages/\"",
 		"prebuild:dev": "rd /s /q dist",
 		"start:dev": "node dist/client.js",
-		"dev": "npm run build:dev&run-p watch chokidar start:dev"
+		"dev": "npm run build:dev&run-p watch chokidar:dev start:dev"
 	},
 	"lint-staged": {
 		"*.{mjs,js,ts}": "eslint --fix --ext mjs,js,ts"
