feat: help command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"rootDir": "src",
 		"outDir": "dist",
-		"tsBuildInfoFile": "dist/.tsbuildinfo"
+		"tsBuildInfoFile": "dist/.tsbuildinfo",
+		"noFallthroughCasesInSwitch": false
 	},
-	"include": ["src", "examples/commands", "examples/General"]
+	"include": ["src"]
 }
