--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,11 @@
 	"i18n-ally.keystyle": "nested",
 	"i18n-ally.editor.preferEditor": true,
 	"i18n-ally.indent": 4,
-	"i18n-ally.pathMatcher": "{locale}/{namespace}.json",
+	"i18n-ally.pathMatcher": "{locale}/{namespaces}.json",
 	"i18n-ally.sortKeys": true,
 	"i18n-ally.keepFulfilled": true,
 	"i18n-ally.namespace": true,
 	"i18n-ally.preferredDelimiter": ":",
-	"i18n-ally.enabledFrameworks": ["sapphire-i18next"],
+	"i18n-ally.enabledFrameworks": ["sapphire-i18next", "custom"],
 	"i18n-ally.keysInUse": ["validation.retry*", "glossary.WHA", "glossary.SLS", "glossary.skills.*", "validation.rule.*"]
 }
