--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"colorette": "^2.0.16",
 		"discord.js": "^13.7.0",
 		"dotenv-cra": "^3.0.2",
+		"fuse.js": "^6.6.2",
 		"mongodb": "^4.6.0",
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
