--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"@sapphire/utilities": "^3.6.2",
 		"chokidar-cli": "^3.0.0",
 		"colorette": "^2.0.17",
+		"discord-api-types": "^0.34.0",
 		"discord.js": "^13.8.0",
 		"dotenv-cra": "^3.0.2",
+		"fuse.js": "^6.6.2",
 		"mongodb": "^4.7.0",
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
@@ -33,10 +35,14 @@
 		"@sapphire/prettier-config": "^1.4.3",
 		"@types/node": "^17.0.10",
 		"@types/ws": "^8.5.3",
+		"@typescript-eslint/eslint-plugin": "^5.27.1",
+		"@typescript-eslint/parser": "^5.27.1",
 		"commitlint": "^17.0.2",
 		"cpy-cli": "^4.1.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.17.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^8.0.1",
 		"jest": "^28.1.1",
 		"lint-staged": "^13.0.1",
