--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"@sapphire/utilities": "^3.6.2",
 		"chokidar-cli": "^3.0.0",
 		"colorette": "^2.0.19",
+		"discord-api-types": "^0.34.0",
 		"discord.js": "^13.8.0",
 		"dotenv-cra": "^3.0.2",
+		"fuse.js": "^6.6.2",
 		"mongodb": "^4.7.0",
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
@@ -42,6 +44,7 @@
 		"lint-staged": "^13.0.1",
 		"prettier": "^2.7.0",
 		"pretty-quick": "^3.1.3",
+		"ts-toolbelt": "^9.6.0",
 		"tsc-watch": "^5.0.3",
 		"typescript": "^4.7.3"
 	},
