--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"dotenv-cra": "^3.0.2",
 		"fuse.js": "^6.6.2",
 		"mongodb": "^4.7.0",
+		"node-schedule": "^2.1.0",
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
 	},
@@ -36,6 +37,7 @@
 		"@sapphire/eslint-config": "^4.3.7",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@types/node": "^17.0.10",
+		"@types/node-schedule": "^2.1.0",
 		"@types/ws": "^8.5.3",
 		"commitlint": "^17.0.3",
 		"cpy-cli": "^4.1.0",
