feat: migrating commands
* feat: add language keys for rule command

* feat: chooseclass command

* perf: increase performance by using gett instead

* chore: restyle rule embed

* feat: retry message

* chore: edit extension settings

* fix(deps): update all non-major dependencies

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* chore(deps): update dependency husky to v8 (#16)

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* chore(deps): update actions/setup-node digest to 17f8bd9 (#17)

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* chore(deps): update commitlint monorepo to v17 (#18)

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* feat: help command

* feat: start buttons

* feat: profile and buy commands

* chore: lockfile

* chore(deps): fusejs

* feat: use n recover commands

* feat: drink heal inventory commands

* chore: downgrade yarn

* chore: upgrade yarn

* chore: workflows

* fix: build n i18n

* feat: cooldown info invite

* feat: i18n

* feat: party sell give

* chore: deps

* chore: deps

* fix: buy sell

* feat: top

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Renovate Bot <bot@renovateapp.com>

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -34,12 +34,12 @@ jobs:
         uses: actions/setup-node@eeb10cff27034e7acf239c5d29f62154018672fd # tag=v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: yarn
+          cache: npm
       - name: Locate source
         run: cd ~/test/_work/Solo-Leveling-Simulator/Solo-Leveling-Simulator/
       - name: Install dependencies
-        run: yarn install
+        run: npm install
       - name: Build
-        run: yarn build:p
-      - name: Prune Dev-dependencies
-        run: npm prune --production
+        run: npm run build:p
+      # - name: Prune Dev-dependencies
+      #   run: npm prune --production
