--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
 		"@sapphire/plugin-hmr": "^1.2.0",
 		"@sapphire/plugin-i18next": "^2.5.2",
 		"@sapphire/plugin-logger": "^2.2.1",
+		"@sapphire/plugin-subcommands": "pr-271",
+		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/ts-config": "^3.3.4",
 		"@sapphire/utilities": "^3.7.0",
 		"chokidar-cli": "^3.0.0",
 		"colorette": "^2.0.19",
+		"discord-api-types": "^0.34.0",
 		"discord.js": "^13.8.1",
 		"dotenv-cra": "^3.0.2",
+		"fuse.js": "^6.6.2",
 		"mongodb": "^4.7.0",
+		"node-schedule": "^2.1.0",
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
 	},
@@ -32,18 +37,20 @@
 		"@sapphire/eslint-config": "^4.3.7",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@types/node": "^17.0.10",
+		"@types/node-schedule": "^2.1.0",
 		"@types/ws": "^8.5.3",
 		"commitlint": "^17.0.3",
 		"cpy-cli": "^4.1.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.19.0",
+		"eslint": "^8.17.0",
 		"husky": "^8.0.1",
 		"jest": "^28.1.2",
 		"lint-staged": "^13.0.3",
-		"prettier": "^2.7.1",
+		"prettier": "^2.7.0",
 		"pretty-quick": "^3.1.3",
+		"ts-toolbelt": "^9.6.0",
 		"tsc-watch": "^5.0.3",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.3"
 	},
 	"scripts": {
 		"commit": "git-cz",
