--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@devtomio/plugin-botlist": "^1.2.0",
-		"@discordjs/builders": "^0.16.0",
-		"@discordjs/collection": "^0.8.0",
+		"@discordjs/builders": "^0.15.0",
 		"@kaname-png/plugin-statcord": "^2.1.0",
 		"@sapphire/decorators": "^4.3.8",
 		"@sapphire/discord-utilities": "^2.11.4",
@@ -27,7 +26,7 @@
 		"discord.js": "^13.8.1",
 		"dotenv-cra": "^3.0.2",
 		"fuse.js": "^6.6.2",
-		"mongodb": "^4.8.0",
+		"mongodb": "4.7.0",
 		"node-schedule": "^2.1.0",
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13"
@@ -39,10 +38,13 @@
 		"@types/node": "^17.0.10",
 		"@types/node-schedule": "^2.1.0",
 		"@types/ws": "^8.5.3",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
 		"commitlint": "^17.0.3",
 		"cpy-cli": "^4.1.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.20.0",
+		"eslint": "^8.17.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.1",
 		"jest": "^28.1.3",
 		"lint-staged": "^13.0.3",
