--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"i18n-ally.localesPaths": ["src/languages"],
+	"i18n-ally.localesPaths": "src/languages",
 	"i18n-ally.keystyle": "nested",
 	"i18n-ally.editor.preferEditor": true,
 	"i18n-ally.indent": 4,
@@ -9,5 +9,6 @@
 	"i18n-ally.namespace": true,
 	"i18n-ally.preferredDelimiter": ":",
 	"i18n-ally.enabledFrameworks": ["sapphire-i18next", "custom"],
-	"i18n-ally.keysInUse": ["validation.retry*", "glossary.WHA", "glossary.SLS", "glossary.skills.*", "validation.rule.*"]
+	"i18n-ally.keysInUse": ["validation.retry*", "glossary.WHA", "glossary.SLS", "glossary.skills.*", "validation.rule.*"],
+	"task.allowAutomaticTasks": "on"
 }
